--- a/BITE/Issue/styles.css
+++ b/BITE/Issue/styles.css
@@ -108,10 +108,12 @@
     -moz-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.8) inset;
     -webkit-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.8) inset;
   position: absolute;
-  height: 100%;
-  width: 100%;
+  height: 98.5%;
+  width: 98%;
   z-index: 8;
   top: 0;
+  margin-top: 3px;
+
 }
 .issue-title-wrap-row2 .overlay {
   position: absolute;
@@ -139,10 +141,11 @@ opacity: 1;
     -moz-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.8) inset;
     -webkit-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.8) inset;
   position: absolute;
-  height: 100%;
-  width: 100%;
+  height: 98%;
+  width: 99%;
   z-index: 10;
   top: 0;
+  margin-top: 3px;
 }
 
 .issue-title-wrap-row1 .overlay {
